force-app/main/default/objects/Competitor_Products__c/Competitor_Products__c.object-meta.xml
<CustomObject>
    <description>Used to store a list of competitors products</description>
    <label>3rd-Party Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>3rd-Party Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>