force-app/main/default/objects/Competitor_Products__c/fields/Is_Competitive__c.field-meta.xml
<CustomField>
    <fullName>Is_Competitive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Competitive?</label>
    <type>Checkbox</type>
</CustomField>