force-app/main/default/objects/Competitor_Products__c/fields/Is_Complimentary__c.field-meta.xml
<CustomField>
    <fullName>Is_Complimentary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Complimentary?</label>
    <type>Checkbox</type>
</CustomField>