force-app/main/default/objects/Competitor_Products__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dispatch Provider</fullName>
            </value>
            <value>
                <fullName>Fuel Tax</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Routing Software</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Reseller - Hardware</fullName>
            </value>
            <value>
                <fullName>Reseller - Software</fullName>
            </value>
            <value>
                <fullName>Reseller - Partner</fullName>
            </value>
            <value>
                <fullName>Data Share</fullName>
            </value>
            <value>
                <fullName>Service Supplier</fullName>
            </value>
            <value>
                <fullName>Trailer Utilization Software</fullName>
            </value>
            <value>
                <fullName>Vehicle Utilization Software</fullName>
            </value>
            <value>
                <fullName>Driver Utilization Software</fullName>
            </value>
            <value>
                <fullName>Compliance Software</fullName>
            </value>
            <value>
                <fullName>Logistics Software</fullName>
            </value>
            <value>
                <fullName>Dispatch Software</fullName>
            </value>
            <value>
                <fullName>Oil Field Support Software</fullName>
            </value>
            <value>
                <fullName>Vehicle Safety Software</fullName>
            </value>
            <value>
                <fullName>Freight Services Software</fullName>
            </value>
            <value>
                <fullName>Maintenance Software</fullName>
            </value>
            <value>
                <fullName>Payment Solutions Software</fullName>
            </value>
            <value>
                <fullName>Electric Utility Software</fullName>
            </value>
            <value>
                <fullName>Traffic Congestion Software</fullName>
            </value>
            <value>
                <fullName>Fuel Optimization Software</fullName>
            </value>
            <value>
                <fullName>Route Optimization Software</fullName>
            </value>
            <value>
                <fullName>Fuel Tax Software</fullName>
            </value>
            <value>
                <fullName>Supply Chain Software</fullName>
            </value>
            <value>
                <fullName>Navigation Software</fullName>
            </value>
            <value>
                <fullName>Document Management Software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>